--- a/Rules
+++ b/Rules
@@ -1,5 +1,9 @@
 #!/usr/bin/env ruby
 
+# So I can use compass
+require 'compass'
+Compass.add_project_configuration 'compass_config.rb'
+
 # A few helpful tips about the Rules file:
 #
 # * The string given to #compile and #route are matching patterns for
@@ -13,21 +17,29 @@
 #   item, use the pattern “/about/*/”; “/about/*” will also select the parent,
 #   because “*” matches zero or more characters.
 
-compile '/stylesheet/' do
-  # don’t filter or layout
+compile '/assets/stylesheets/*/' do
+  filter :sass, Compass.sass_engine_options
 end
 
 compile '*' do
   if item.binary?
     # don’t filter binary items
   else
-    filter :erb
-    layout 'default'
+    ext = item[:extension].nil? ? nil : item[:extension].split('.').last
+    if ext == 'haml'
+      filter :haml
+    elsif ext == 'markdown'
+      filter :redcarpet
+    else
+      raise "WHAT IS THIS EXT? While processing #{item.attributes}"
+    end
+
+    layout "default"
   end
 end
 
-route '/stylesheet/' do
-  '/style.css'
+route '/assets/stylesheets/*/' do
+  item.identifier.chop + '.css'
 end
 
 route '*' do
@@ -40,4 +52,4 @@ route '*' do
   end
 end
 
-layout '*', :erb
+layout '*', :haml
