--- a/Rules
+++ b/Rules
@@ -21,6 +21,10 @@ compile '/assets/stylesheets/*/' do
   filter :sass, Compass.sass_engine_options
 end
 
+compile '/assets/javascripts/*/' do
+  filter :coffee
+end
+
 compile '*' do
   if item.binary?
     # don’t filter binary items
@@ -40,6 +44,10 @@ end
 
 route '/assets/stylesheets/*/' do
   item.identifier.chop + '.css'
+end
+
+route '/assets/javascripts/*/' do
+  item.identifier.chop + '.js'
 end
 
 route '*' do
