--- a/Rules
+++ b/Rules
@@ -33,6 +33,18 @@ compile '/assets/javascripts/*/' do
   end
 end
 
+compile '/posts/*/' do
+  ext = item[:extension].nil? ? nil : item[:extension].split('.').last
+  if ext == 'markdown' || ext == 'pandoc'
+    filter :pandoc
+    filter :pygments
+  else
+    raise "Unknown ext: #{ext} with item: #{item.attributes}"
+  end
+
+  layout 'default'
+end
+
 compile '*' do
   if item.binary?
     # don’t filter binary items
@@ -42,10 +54,6 @@ compile '*' do
       filter :haml
     elsif ext == 'markdown'
       filter :pandoc
-      filter :pygments
-    elsif ext == 'pandoc'
-      filter :pandoc
-      filter :pygments
     else
       raise "WHAT IS THIS EXT? While processing #{item.attributes}"
     end
