--- a/Rules
+++ b/Rules
@@ -38,7 +38,7 @@ end
 
 compile '/posts/*/' do
   ext = item[:extension].nil? ? nil : item[:extension].split('.').last
-  if ext == 'markdown' || ext == 'pandoc'
+  if ext == 'pandoc'
     filter :pandoc
     filter :pygments
   else
@@ -55,7 +55,7 @@ compile '*' do
     ext = item[:extension].nil? ? nil : item[:extension].split('.').last
     if ext == 'haml'
       filter :haml
-    elsif ext == 'markdown'
+    elsif ext == 'pandoc'
       filter :pandoc
     else
       raise "WHAT IS THIS EXT? While processing #{item.attributes}"
