--- a/Rules
+++ b/Rules
@@ -27,10 +27,10 @@ end
 compile '/assets/javascripts/*/' do
   ext = item[:extension].nil? ? nil : item[:extension].split('.').last
   if ext == 'coffee'
-    filter :coffee
+    filter :coffeescript
     # filter :uglify_js
   elsif ext == "js"
-    filter :uglify_js
+    # filter :uglify_js
   else
     raise "Unknown thing #{item.attributes}"
   end
