--- a/Rules
+++ b/Rules
@@ -57,11 +57,13 @@ compile '*' do
       filter :haml
     elsif ext == 'pandoc'
       filter :pandoc
+    elsif ext == 'tex'
+      filter :latex
     else
       raise "WHAT IS THIS EXT? While processing #{item.attributes}"
     end
 
-    if item[:layout] != 'none'
+    if item[:layout] != 'none' && ext != 'tex'
       layout "default"
     end
   end
@@ -86,9 +88,13 @@ route '/posts/*/' do
 end
 
 route '*' do
+  ext = item[:extension].nil? ? nil : item[:extension].split('.').last
+
   if item.binary?
     # Write item with identifier /foo/ to /foo.ext
     item.identifier.chop + '.' + item[:extension]
+  elsif ext == 'tex'
+    item.identifier.chop + '.pdf'
   else
     # Write item with identifier /foo/ to /foo/index.html
     item.identifier + 'index.html'
