--- a/config.yaml
+++ b/config.yaml
@@ -58,5 +58,5 @@ watcher:
   files_to_watch: [ 'config.yaml', 'Rules', 'compass_config.rb']
 
   # When to send notifications (using Growl or notify-send).
-  notify_on_compilation_success: true
+  notify_on_compilation_success: false
   notify_on_compilation_failure: true
