--- a/config.yaml
+++ b/config.yaml
@@ -63,3 +63,8 @@ watcher:
 
 # Required for XML Sitemap
 base_url: http://www.zameermanji.com
+
+prune:
+  # This nanoc will automatically run nanoc prune every time I compile
+  # note that it is sort of dangerous
+  auto_prune: true
