Update config and fonts.

--- a/config.yaml
+++ b/config.yaml
@@ -40,8 +40,13 @@ data_sources:
     # same as the items root, but applies to layouts rather than items.
     layouts_root: /
 
-    config:
-      allow_periods_in_identifiers: true
+    # Whether to allow periods in identifiers. When turned off, everything
+    # past the first period is considered to be the extension, and when
+    # turned on, only the characters past the last period are considered to
+    # be the extension. For example,  a file named “content/about.html.erb”
+    # will have the identifier “/about/” when turned off, but when turned on
+    # it will become “/about.html/” instead.
+    allow_periods_in_identifiers: true
 
 # Configuration for the “watch” command, which watches a site for changes and
 # recompiles if necessary.
