--- a/Rules
+++ b/Rules
@@ -73,9 +73,7 @@ compile '/assets/javascripts/*/' do
   ext = item[:extension].nil? ? nil : item[:extension].split('.').last
   if ext == 'coffee'
     filter :coffeescript
-    # filter :uglify_js
   elsif ext == "js"
-    # filter :uglify_js
   else
     raise "Unknown thing #{item.attributes}"
   end
@@ -84,7 +82,7 @@ end
 compile '/posts/*/' do
   ext = item[:extension].nil? ? nil : item[:extension].split('.').last
   if ext == 'pandoc'
-    filter :pandoc
+    filter :pandoc, [:no_highlight]
     filter :pygments
   else
     raise "Unknown ext: #{ext} with item: #{item.attributes}"
