--- a/nanoc.yaml
+++ b/nanoc.yaml
@@ -1,7 +1,7 @@
 # A list of file extensions that nanoc will consider to be textual rather than
 # binary. If an item with an extension not in this list is found,  the file
 # will be considered as binary.
-text_extensions: ['coffee', 'css', 'erb', 'haml', 'htm', 'html', 'js', 'less', 'markdown', 'md', 'pandoc', 'php', 'rb', 'sass', 'scss', 'tex', 'txt', 'xhtml', 'xml' ]
+text_extensions: ['css', 'erb', 'haml', 'html', 'js', 'less', 'markdown', 'md', 'pandoc', 'php', 'rb', 'sass', 'scss', 'tex', 'txt', 'xhtml', 'xml' ]
 
 # The path to the directory where all generated files will be written to. This
 # can be an absolute path starting with a slash, but it can also be path
