--- a/nanoc.yaml
+++ b/nanoc.yaml
@@ -48,31 +48,13 @@ data_sources:
     # it will become “/about.html/” instead.
     allow_periods_in_identifiers: true
 
-  # See:
-  # https://github.com/cboone/nanoc-static-data-source
-  # https://github.com/ddfreyne/nanoc/pull/58
+  # This is fallout from the nanoc 4 upgrade, move the static stuff into
+  # content.
   -
-    type: static
+    type: filesystem
     items_root: /static
-    prefix: static
-
-# Configuration for the “watch” command, which watches a site for changes and
-# recompiles if necessary.
-watcher:
-  # A list of directories to watch for changes. When editing this, make sure
-  # that the “output/” and “tmp/” directories are _not_ included in this list,
-  # because recompiling the site will cause these directories to change, which
-  # will cause the site to be recompiled, which will cause these directories
-  # to change, which will cause the site to be recompiled again, and so on.
-  dirs_to_watch: [ 'content', 'layouts', 'lib' ]
-
-  # A list of single files to watch for changes. As mentioned above, don’t put
-  # any files from the “output/” or “tmp/” directories in here.
-  files_to_watch: [ 'nanoc.yaml', 'Rules', 'compass_config.rb']
-
-  # When to send notifications (using Growl or notify-send).
-  notify_on_compilation_success: false
-  notify_on_compilation_failure: true
+    content_dir: 'static'
+    layouts_dir: null
 
 # Required for XML Sitemap
 base_url: http://www.zameermanji.com
