--- a/nanoc.yaml
+++ b/nanoc.yaml
@@ -40,6 +40,7 @@ data_sources:
     # same as the items root, but applies to layouts rather than items.
     layouts_root: /
 
+    # TODO(zmanji): Switch to a regular filesystem and remove this option.
     # Whether to allow periods in identifiers. When turned off, everything
     # past the first period is considered to be the extension, and when
     # turned on, only the characters past the last period are considered to
@@ -48,6 +49,7 @@ data_sources:
     # it will become “/about.html/” instead.
     allow_periods_in_identifiers: true
 
+  # TODO(zmanji) Remove this
   # This is fallout from the nanoc 4 upgrade, move the static stuff into
   # content.
   -
