--- a/Rules
+++ b/Rules
@@ -118,12 +118,10 @@ route '/index.haml' do
 end
 
 route '**/*' do
-  ext = item.identifier.ext
-
   if item.binary?
     # Write item with identifier /foo/ to /foo.ext
     item.identifier.without_ext + '.' + item.identifier.ext
-  elsif ext == 'tex'
+  elsif item.identifier.ext == 'tex'
     item.identifier.without_ext + '.pdf'
   else
     # Write item with identifier /foo/ to /foo/index.html
