--- a/Rules
+++ b/Rules
@@ -111,8 +111,7 @@ end
 
 route '**/*' do
   if item.binary?
-    # Write item with identifier /foo/ to /foo.ext
-    item.identifier.without_ext + '.' + item.identifier.ext
+    item.identifier.to_str
   elsif item.identifier.ext == 'tex'
     item.identifier.without_ext + '.pdf'
   else
